fix spacing bugs

--- a/_src/css/_variables.scss
+++ b/_src/css/_variables.scss
@@ -17,6 +17,7 @@ $brand-primary:         #009DB0 !default;
 //== Typography
 $font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $headings-font-family:    'Arvo', $font-family-sans-serif;
+$headings-line-height:    1.2;
 
 //== Iconography
 //== Components
